[package]
name = "unaf"
description = "U.N.A.F.; [U]SAGI.[N]ETWORK [A]pplication [F]ramework"
version = "0.0.0"
edition = "2021"
authors = ["USAGI.NETWORK / Usagi Ito <the@usagi.network>"]
license = "MIT"
repository = "https://github.com/usagi/unaf"
categories = [
 "wasm",
 "web-programming::http-client",
 "web-programming::http-server",
 "gui"
]
keywords = ["unaf", "app-framework", "usagi-network", "web"]
documentation = "https://docs.rs/unaf/"

[dependencies]
